--- a/templates/index.html
+++ b/templates/index.html
@@ -73,91 +73,14 @@
     <!-- Chat bot UI start -->
     <div class="chat-screen">
       <div class="chat-header">
-        <div class="chat-header-title">Let’s chat? - We're online</div>
-        <div class="chat-header-option hide">
-          <span class="dropdown custom-dropdown">
-            <a
-              class="dropdown-toggle"
-              href="#"
-              role="button"
-              id="dropdownMenuLink1"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="feather feather-more-horizontal"
-              >
-                <circle cx="12" cy="12" r="1"></circle>
-                <circle cx="19" cy="12" r="1"></circle>
-                <circle cx="5" cy="12" r="1"></circle>
-              </svg>
-            </a>
-            <div
-              class="dropdown-menu dropdown-menu-right"
-              aria-labelledby="dropdownMenuLink1"
-              style="will-change: transform"
-            >
-              <a class="dropdown-item" href="javascript:void(0);">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="#bc32ef"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="feather feather-file-text"
-                >
-                  <path
-                    d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
-                  ></path>
-                  <polyline points="14 2 14 8 20 8"></polyline>
-                  <line x1="16" y1="13" x2="8" y2="13"></line>
-                  <line x1="16" y1="17" x2="8" y2="17"></line>
-                  <polyline points="10 9 9 9 8 9"></polyline>
-                </svg>
-                Send Transcriptions
-              </a>
-              <a class="dropdown-item end-chat" href="javascript:void(0);">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="#bc32ef"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="feather feather-power"
-                >
-                  <path d="M18.36 6.64a9 9 0 1 1-12.73 0"></path>
-                  <line x1="12" y1="2" x2="12" y2="12"></line>
-                </svg>
-                End Chat
-              </a>
-            </div>
-          </span>
-        </div>
+        <div class="chat-header-title">Чат бот</div>
       </div>
-      <div class="chat-mail">
+      <!-- Форма ввода контактных данных, пока что не нужно -->
+      <!-- <div class="chat-mail">
         <div class="row">
           <div class="col-md-12 text-center mb-2">
             <p>
-              Hi 👋! Please fill out the form below to start chatting with the
-              next available agent.
+              Здравствуйте 👋! Пожалуйста заполните свои контактные данные, чтобы мы связались с вами в случае нерешенных вопросов.
             </p>
           </div>
         </div>
@@ -173,34 +96,20 @@
             </div>
           </div>
           <div class="col-md-12">
-            <select class="form-control select2_el">
-              <option selected="selected">Select Option</option>
-              <option>Report Abuse</option>
-              <option>Other</option>
-            </select>
-          </div>
-          <div class="col-md-12">
             <button class="btn btn-primary btn-rounded btn-block">
-              Start Chat
+              Начать общение
             </button>
           </div>
-          <div class="col-md-12">
-            <div class="powered-by">Powered by css3transition</div>
-          </div>
         </div>
-      </div>
+      </div> -->
+      <!-- конец формы -->
+
       <div class="chat-body hide">
-        <div class="chat-start">Monday, 1:27 PM</div>
         <div class="chat-bubble you">
-          Welcome to our site, if you need help simply reply to this message, we
-          are online and ready to help.
+          Добро пожаловать на сайт БГУ, введите интересующие вопросы здесь, а наш бот постарается вам ответить.
         </div>
-        <div class="chat-bubble me">Hi, I am back</div>
-        <div class="chat-bubble me">I just want my Report Status.</div>
-        <div class="chat-bubble me">
-          As i am not getting any weekly reports nowadays.
-        </div>
-        <div class="chat-bubble you">
+        <!-- анимация набора сообщения ботом, пока что не нужно -->
+        <!-- <div class="chat-bubble you">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -251,34 +160,19 @@
               ></animate>
             </circle>
           </svg>
-        </div>
+        </div> -->
+        <!-- конец анимации -->
+
       </div>
       <div class="chat-input hide">
-        <input type="text" placeholder="Type a message..." />
+        <input type="text" placeholder="Введите сообщение..." class="message-text-input"/>
         <div class="input-action-icon">
-          <a
+          <a class="send-message-btn"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="feather feather-paperclip"
-            >
-              <path
-                d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
-              ></path></svg
-          ></a>
-          <a
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
+              width="30"
+              height="30"
+              viewBox="0 0 30 30"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
@@ -377,114 +271,11 @@
       </svg>
     </div>
     <!-- Chat Bot UI Ends -->
-    <!-- Time line Html Start -->
-    <h1 class="hide">Responsive Timeline using Flexbox</h1>
-    <div class="timeline hide">
-      <div class="timeline-item">
-        <div class="timeline-date">
-          <img src="stylesheet/images/cities/delhi.svg" />
-          <div>January 2019</div>
-        </div>
-        <div class="timeline-content">
-          <h2>Journey Start <span>(Delhi)</span></h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad saepe
-            nulla quibusdam ut. Beatae, facere sequi blanditiis porro suscipit
-            tempore ipsam iste ipsa, culpa quam vero, dolorem cupiditate. Magni,
-            numquam?<button type="button" class="visit">Visit ›</button
-            ><img src="stylesheet/images/cities/delhi.svg" />
-          </p>
-          <br />
-          <i class="fas fa-rocket fa-icon"></i>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-date">
-          <img src="stylesheet/images/cities/lucknow.svg" />
-          <div>February 2019</div>
-        </div>
-        <div class="timeline-content">
-          <h2>Nawabo ka Sehar<span>(Lucknow)</span></h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad saepe
-            nulla quibusdam ut. Beatae, facere sequi blanditiis porro suscipit
-            tempore ipsam iste ipsa, culpa quam vero, dolorem cupiditate. Magni,
-            numquam?<button type="button" class="visit">Visit ›</button
-            ><img src="stylesheet/images/cities/lucknow.svg" />
-          </p>
-
-          <br />
-          <i class="fas fa-graduation-cap fa-icon"></i>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-date">
-          <img src="stylesheet/images/cities/prayagraj.svg" />
-          <div>March 2019</div>
-        </div>
-        <div class="timeline-content">
-          <h2>Devotional Place<span>(Prayagraj)</span></h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad saepe
-            nulla quibusdam ut. Beatae, facere sequi blanditiis porro suscipit
-            tempore ipsam iste ipsa, culpa quam vero, dolorem cupiditate. Magni,
-            numquam?<button type="button" class="visit">Visit ›</button
-            ><img src="stylesheet/images/cities/prayagraj.svg" />
-          </p>
-
-          <br />
-          <i class="fas fa-power-off fa-icon"></i>
-        </div>
-      </div>
-    </div>
-    <script type="257be86a981729866f2fa61c-text/javascript">
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-83834093-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-    <script
-      src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js"
-      data-cf-settings="257be86a981729866f2fa61c-|49"
-      defer=""
-    ></script>
-    <!-- Time line Html Ends -->
     <!-- BEGIN GLOBAL MANDATORY SCRIPTS -->
     <script src="{{ url_for('static', filename='js/jquery-3.1.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/select2.min.js') }}"></script>
-    <script>
-      $(document).ready(function () {
-        $(".select2_el").select2({});
-      });
-    </script>
-    <script>
-      $(document).ready(function () {
-        //Toggle fullscreen
-        $(".chat-bot-icon").click(function (e) {
-          $(this).children("img").toggleClass("hide");
-          $(this).children("svg").toggleClass("animate");
-          $(".chat-screen").toggleClass("show-chat");
-        });
-        $(".chat-mail button").click(function () {
-          $(".chat-mail").addClass("hide");
-          $(".chat-body").removeClass("hide");
-          $(".chat-input").removeClass("hide");
-          $(".chat-header-option").removeClass("hide");
-        });
-        $(".end-chat").click(function () {
-          $(".chat-body").addClass("hide");
-          $(".chat-input").addClass("hide");
-          $(".chat-session-end").removeClass("hide");
-          $(".chat-header-option").addClass("hide");
-        });
-      });
-    </script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
   </body>
 </html>
