--- a/static/css/chatBot.css
+++ b/static/css/chatBot.css
@@ -3,12 +3,13 @@
     bottom: 68px;
     right: 20px;
     z-index: 9999;
-    width: 350px;
+    max-width: 350px;
     background: #fff;
     box-sizing: border-box;
     border-radius: 15px;
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
     visibility: hidden;
+    margin-left: 20px;
 }
 .chat-screen.show-chat {
     -moz-transition: bottom 0.5s linear;
